# ScenerServer

./: .gitignore  Makefile  README.md  config.json  constraints.txt  env_example  install.sh  pyproject.toml
doc/: interresting_models  use_case.ods
src/: __main__.py  lib.py
src/agent/: __main__.py  agent.py  api.py
src/agent/llm/: creation.py  interaction.py  tooling.py
src/agent/tools/: __init__.py
src/agent/tools/asset/: component.py  image.py  library.py
src/agent/tools/input/: gesture.py
src/agent/tools/pipeline/: image_generation.py  td_object_generation.py  td_scene_generation.py  td_scene_modification.py
src/agent/tools/processing/: image_to_depth.py
src/agent/tools/scene/: analyzer.py  decomposer.py  improver.py
src/agent/tools/simple/: browsing.py  calculator.py  date.py
src/gesture/: __main__.py  hand.py  image.py  mediapipe.py  utils.py
src/model/: stable_diffusers.py  trellis.py
src/sdk/: messages.py  patch.py  scene.py
src/sdk/protobuf/: Message.cs  message.proto  message_pb2.py
src/server/: __main__.py  api.py  client.py  server.py
src/server/data/: message.py  redis.py  valider.py
src/server/io/: input.py  output.py  queue.py
src/server/test/: client.py  image.py  simple.py
tests/functional/: load_image.py
tests/functional/tool/: date.py  image.py  library.py
tests/unit/agent/: tests.py
tests/unit/server/: client.py  server_test.py  tests.py
