[project]
name = "Scener"
version = "0.1.0"
description = "3D scene generation interface"

requires-python = "==3.10.*"

dependencies = [
    "accelerate==0.29.3",
    "beartype==0.22.2",
    "colorama==0.4.6",
    "chromadb",
    "diffusers==0.32.2",
    "easydict==1.13",
    "huggingface_hub==0.35.3",
    "imageio==2.37.0",
    "ipywidgets==8.1.7",
    "langchain==0.3.27",
    "langchain_community==0.3.30",
    "langchain_core==0.3.78",
    "langchain_ollama==0.3.10",
    "langgraph==0.6.8",
    "loguru==0.7.3",
    "matplotlib==3.10.6",
    "numpy==2.2.6",
    "objaverse==0.1.7",
    "open3d",
    "pandas==2.3.3",
    "pillow==11.3.0",
    "plyfile==1.1.2",
    "protobuf==6.32.1",
    "pydantic==2.11.10",
    "pytest==8.4.2",
    "python_igraph==0.11.9",
    "pyvista==0.46.3",
    "rembg==2.0.67",
    "requests==2.32.5",
    "safetensors==0.6.2",
    "sentencepiece",
    "sentence-transformers",
    "scipy==1.15.2",
    "tenacity==9.1.2",
    "tqdm==4.67.1",
    "transformers==4.49",
    "trimesh==4.8.3",
    "websockets==15.0.1",
    "redis"
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
